# tdworkflow

./: .gitignore  .readthedocs.yml  CHANGES.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  workflow.py
.circleci/: config.yml
.github/workflows/: pythonapp.yml  pythonpublish.yml
docs/: conf.py  index.rst  modules.rst
docs/references/: client.rst  index.rst  misc.rst  model.rst
tdworkflow/: __init__.py  attempt.py  client.py  exceptions.py  log.py  project.py  resource.py  revision.py  schedule.py  session.py  task.py  util.py  workflow.py
tests/: test_client.py  test_util.py
tests/resources/sample_project/: main.dig
