[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tdworkflow"
description = "Unofficial Treasure Workflow API client"
authors = [
  {name = "Aki Ariga", email = "chezou@gmail.com"}
]
maintainers = [
  {name ="Aki Ariga", email = "chezou@gmail.com"}
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
  "requests",
  "mypy-extensions",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "mypy",
]
doc = [
  "sphinx",
  "sphinx_rtd_theme",
]


[project.urls]
"Homepage" = "https://github.com/chezou/tdworkflow"
"Bug Reports" = "https://github.com/chezou/tdworkflow/issues"
"Funding" = "https://github.com/sponsors/chezou"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade - modernize Python code
]
ignore = ["E203"]  # Match current flake8 ignores (W503 is not needed in ruff)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
