[metadata]
name = tdworkflow
summary = Unofficial Treasure Workflow API client
description-file = README.md
version = file: VERSION
author = Aki Ariga
autho_email = chezou@gmail.com
license = Apache License, Version 2.0
license_files =
  LICENSE
long_description = file: README.md

[options]
packages = find:
install_requires =
  requests

[options.extras_require]
dev = black;flake8;isort;pytest;pytest-mock

[flake8]
ignore = E203, W503
max-line-length = 88

[isort]
known_third_party = requests
line_length=88
multi_line_output=3
include_trailing_comma=True
