[metadata]
name = tdworkflow
summary = Unofficial Treasure Workflow API client
description-file = README.md
version = file: VERSION
author = Aki Ariga
autho_email = chezou@gmail.com
license = Apache License, Version 2.0
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chezou/tdworkflow
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    requests

[options.extras_require]
dev = black;flake8;isort;pytest;pytest-mock

[flake8]
ignore = E203, W503
max-line-length = 88
exclue = .git, .eggs, __pycache__, docs/, build/, dist/

[isort]
known_third_party = requests
line_length=88
multi_line_output=3
include_trailing_comma=True
