[metadata]
name = tdworkflow
summary = Unofficial Treasure Workflow API client
description_file = README.rst
author = Aki Ariga
author_email = chezou@gmail.com
license = Apache License, Version 2.0
license_files =
    LICENSE
long_description = file: README.rst
url = https://github.com/chezou/tdworkflow
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    requests
setup_requires =
    setuptools_scm

[options.package_data]
tdworkflow = py.typed

[options.extras_require]
dev = black;flake8;isort;pytest;pytest-mock;mypy
doc = sphinx;sphinx_rtd_theme

[flake8]
ignore = E203, W503
max-line-length = 88
exclue = .git, .eggs, __pycache__, docs/, build/, dist/

[isort]
known_third_party = requests
line_length = 88
multi_line_output = 3
include_trailing_comma = True
